# ainews

./: .env.example  .gitignore  2025-07-18_translated.md  CLAUDE.md  Makefile  README.md  latest.txt  prd.md  pyproject.toml
.github/workflows/: pipeline.yml  test-og.yml
docs/: feed.xml  index.html
docs/newsletters/: 2025-07-17.html  2025-07-18.html  2025-07-22.html  2025-07-23.html  2025-07-24.html  2025-07-25.html  2025-07-28.html  2025-07-30.html  2025-08-01.html  2025-08-04.html  2025-08-05.html  2025-08-06.html  2025-08-07.html  2025-08-08.html  2025-08-11.html  2025-08-13.html  2025-08-14.html  2025-08-15.html  2025-08-19.html  2025-08-20.html  2025-08-21.html  2025-08-22.html  2025-08-25.html  2025-08-26.html  2025-08-27.html  2025-08-28.html  2025-08-29.html  2025-09-01.html  2025-09-02.html  2025-09-03.html  2025-09-04.html  2025-09-05.html  2025-09-08.html  2025-09-09.html  2025-09-10.html  2025-09-11.html  2025-09-13.html  2025-09-15.html  2025-09-16.html  2025-09-17.html  (+158 more)
og-generator/: package-lock.json  package.json  tsconfig.json
og-generator/src/: generate.ts
og-generator/src/fonts/: index.ts
og-generator/src/templates/: newsletter.tsx
og-generator/src/utils/: fontLoader.ts
prompts/: translator.txt
public/: feed.xml  index.html
public/newsletters/: 2025-07-18.html  archive.html  index.json
scripts/: convert.py  fetch.py  publish.py  render.py  summarize.py  translate.py  tweet.py
templates/: issue.j2
